# Hashbidder9

./: .dockerignore  .env.example  .gitignore  Dockerfile  GEMINI.md  LICENSE  Makefile  README.md  hashbidder.py  hashbidder.sqlite  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: buildService.yml  ci.yml  releaseService.yml
.hypothesis/constants/: 1bbe4e2f3985373d  1d72e1f43005a5eb  209df19a6ba292ee  23aada185b03168a  2467ef92cf2c5b43  3288a3e7a798feb7  3d984a4eeaacb79e  3e305886da6f8ebb  42de6ee44f61aaff  46a574892bcef13c  4b38d5b3f8a3b4c9  4ccb5fbc6322ef2a  4f16d2489adbd723  50996fe980fead27  59e0c9c99fbcd5eb  5a62956b889ede08  5ff61bd10eb1c4da  60ff11aab6c1a04b  621ff6bebe218f8b  65b30364fcad9a9b  67077d4bab347d84  6878ed83beb2c79f  695a4b59f783565a  698b894cba45b90e  69fd17ef5eee3d66  6a00941df0e01209  72bfbfbe1d9f3331  7bd06e01e962ad5d  7cacb12c70762c2c  86f27bf48fa695b2  8c89b611c4890a7a  a87c5ba62541bb36  a8964beace20f21c  b0244e68b011eb77  b14591747b0cad43  bc6c2b9c0a7bd55c  bef8ee66c86378da  c09411fc4cbb5090  c0aa703b114a6774  c1ae248d3619b6f0  (+17 more)
assets/: ABOUT.md
docs/superpowers/plans/: 2025-05-22-refine-daemon-tests.md  2026-04-17-async-refactor.md  2026-04-17-containerization.md  2026-04-17-operational-resilience.md  (+11 more)
hashbidder/: __init__.py  bid_runner.py  broadcast_hub.py  client.py  config.py  daemon.py  dashboard.py  formatting.py  hashrate.py  main.py  mempool_client.py  metrics.py  ocean_client.py  reconcile.py  target_hashrate.py  use_cases.py
hashbidder/domain/: bid_config.py  bid_planning.py  btc_address.py  hashrate.py  price_tick.py  progress.py  stratum_url.py  upstream.py  user_bid.py
hashbidder/templates/: index.html  settings.html
hashbidder/use_cases/: __init__.py  hashvalue.py  ocean.py  ping.py  set_bids.py  set_bids_target.py
startos/: dependencies.ts  index.ts  interfaces.ts  main.ts  utils.ts
startos/actions/: config.ts  index.ts
startos/config/: index.ts  spec.ts
startos/init/: index.ts
startos/install/: versionGraph.ts
startos/manifest/: i18n.ts  index.ts
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_fake_client.py  test_formatting.py  test_hashrate.py  test_progress.py  test_reconcile.py  test_stratum_url.py
tests/cli/: test_bids.py  test_hashvalue.py  test_ping.py  test_set_bids.py
tests/unit/: test_bid_planning.py  test_braiins_client.py  test_broadcast_hub.py  test_config.py  test_daemon.py  test_dashboard_index.py  test_execute.py  test_fake_client.py  test_formatting.py  test_formatting_hashvalue.py  test_hashrate.py  test_mempool_client.py  test_metrics.py  test_ocean_client.py  test_price_tick.py  test_reconcile.py  test_stream.py  test_stream_simple.py  test_target_hashrate.py  test_use_cases_hashvalue.py  test_use_cases_ocean.py  test_use_cases_set_bids_target.py
(+14 files in other folders)
