[project]
name = "hashbidder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.2",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "D", "B", "SIM", "RUF", "PT", "S"]
ignore = ["D105"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
"hashbidder/main.py" = ["S101"]
"hashbidder/domain/stratum_url.py" = ["S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.importlinter]
root_packages = ["hashbidder"]

[[tool.importlinter.contracts]]
name = "Domain has no outward dependencies"
type = "forbidden"
source_modules = ["hashbidder.domain"]
forbidden_modules = [
    "hashbidder.use_cases",
    "hashbidder.client",
    "hashbidder.main",
    "hashbidder.config",
    "hashbidder.reconcile",
    "hashbidder.ocean_client",
    "hashbidder.mempool_client",
    "hashbidder.hashvalue",
    "hashbidder.formatting",
]

[[tool.importlinter.contracts]]
name = "Use cases must not import from CLI layer"
type = "forbidden"
source_modules = ["hashbidder.use_cases"]
forbidden_modules = ["hashbidder.main"]

[tool.mypy]
strict = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hypothesis>=6.151.11",
    "import-linter>=2.11",
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "ruff>=0.15.9",
]

[project.scripts]
hashbidder = "hashbidder.main:main"

